Arena: * Добаввлен таймер лобби * Добавлен генератор очереди волн (запускается асинхронно при инициализации и при завершении игры) * Добавлены минимальное количество человек для запуска и продолжительность таймера лобби * Добавлен боссбар для отображения таймера лобби * Добавлена возможность вызывать любые волны командой
ArenasManager:
* Добавлена возможность получить ID всех арен
* изменения под новый конфиг

CommandsManager:
* добавлена команда для остановки игры и вызова волн

WavesManager:
* добавлен словарь волн для удобства получения их по именам
* добавлены методы для получения всех волн, всех названий волн и получения волны по имени
* добавлены новые волны

Всем волнам был добавлен метод stopWave() для остановки внутренних раннблов.
Метод получения веса перемещён из интерфейса в абстрактный класс, так как его реализация не зависит от класса.
Вес теперь int а не double.

Должно работать...