@@ -2,12 +2,10 @@ package lampteam.skycore.models;
 
 import lampteam.skycore.Skycore;
 import lampteam.skycore.Utils;
+import lampteam.skycore.managers.WavesManager;
 import lampteam.skycore.models.waves.AWave;
-import lampteam.skycore.models.waves.CreepRain;
-import lampteam.skycore.models.waves.PotionRain;
 import net.kyori.adventure.bossbar.BossBar;
 import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.LinearComponents;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.GameMode;
 import org.bukkit.Location;
@@ -19,16 +17,17 @@ import org.bukkit.scheduler.BukkitRunnable;
 import org.bukkit.util.BoundingBox;
 
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
+import java.util.Random;
 
 public class Arena {
     private final int id;
     private boolean gameActive = false;
+    private boolean lobbyTimerActive = false;
     private final int wavesInterval; // Секунды
     private final String name;
     private final Arena arena;
-
     private final World world;
     private final Location lobbyLocation;
     private final List<Location> playerSpawnLocations;
@@ -36,19 +35,27 @@ public class Arena {
     private final Location centerCore;
     private final BoundingBox borders;
     private final Location hubLocation;
+    private final int lobbyTimerDuration;
+    private final int minPlayers;
 
     private final Skycore plugin = Skycore.getPlugin();
-    private final BossBar timerBar = BossBar.bossBar(Component.text("00:00"), 0f, BossBar.Color.GREEN, BossBar.Overlay.NOTCHED_20);
+    private final BossBar wavesTimerBar = BossBar.bossBar(Component.text("00:00"), 0f, BossBar.Color.GREEN, BossBar.Overlay.NOTCHED_20);
+    private final BossBar lobbyTimerBar = BossBar.bossBar(Component.text(""), 1f, BossBar.Color.GREEN, BossBar.Overlay.PROGRESS);
 
     private final List<PlayerModel> members = new ArrayList<>();
     private final List<PlayerModel> spectators = new ArrayList<>();
     private final List<PlayerModel> players = new ArrayList<>();
 
+    private final List<AWave> wavesCollection;
     private final List<AWave> wavesPool = new ArrayList<>();
-    private final List<AWave> waves = new ArrayList<>();
+    private final List<AWave> activeWaves = new ArrayList<>();
 
-    private BukkitRunnable waveTimer;
-    private BukkitRunnable mainTimer;
+    private final BukkitRunnable waveTimer;
+    private final BukkitRunnable mainTimer;
+    private final BukkitRunnable asyncWavesPoolCreator;
+    private final BukkitRunnable lobbyTimer;
+
+    private final Random random = new Random();
 
     //геттеры
     public List<PlayerModel> getSpectators() {
@@ -90,8 +97,8 @@ public class Arena {
             List<Location> playerSpawnLocations,
             Location centerCore,
             BoundingBox borders,
-            Location hubLocation
-
+            Location hubLocation,
+            int lobbyTimerDuration, int minPlayers
     ){
         arena = this;
 
@@ -105,13 +112,10 @@ public class Arena {
         this.centerCore = centerCore;
         this.borders = borders;
         this.hubLocation = hubLocation;
+        this.lobbyTimerDuration = lobbyTimerDuration;
+        this.minPlayers = minPlayers;
 
-        wavesPool.add(new PotionRain());
-        wavesPool.add(new CreepRain());
-    }
-
-    public void startGame(){
-        gameActive = true;
+        wavesCollection = WavesManager.getAllWaves();
 
         mainTimer = new BukkitRunnable() {
 
@@ -123,7 +127,7 @@ public class Arena {
 
                 time++;
 
-                setTimerDisplay(time);
+                setWavesTimerDisplay(time);
 
                 for (PlayerModel model : players){
                     model.incrementAliveTime(1);
@@ -141,7 +145,6 @@ public class Arena {
                 }
             }
         };
-        mainTimer.runTaskTimer(plugin, 0, 20);
 
         waveTimer = new BukkitRunnable() {
             @Override
@@ -149,8 +152,64 @@ public class Arena {
                 startNewWave();
             }
         };
-        waveTimer.runTaskTimer(plugin, wavesInterval * 20L, wavesInterval * 20L);
 
+        lobbyTimer = new BukkitRunnable() {
+            int counter = lobbyTimerDuration;
+            @Override
+            public void run() {
+                if (players.size() < minPlayers) this.cancel();
+
+                if (counter == 0) {
+                    startGame();
+                    lobbyTimerActive = false;
+                }
+
+                setLobbyTimerDisplay(counter);
+                counter--;
+            }
+        };
+
+        asyncWavesPoolCreator = new BukkitRunnable() {
+            @Override
+            public void run() {
+                wavesPool.clear();
+
+                List<AWave> tempCollection = new ArrayList<>();
+                Collections.copy(tempCollection, wavesCollection);
+
+                int counter = 1;
+                while (true){
+                    int chance = random.nextInt(0, 101);
+
+                    int diff;
+
+                    if (chance < 50) diff = 0;
+                    else if (chance < 75) diff = -1;
+                    else diff = 1;
+
+                    if (counter + diff != 0) counter += diff;
+
+                    int finalCounter = counter;
+
+                    List<AWave> wavesCandidates = tempCollection.stream().filter(wave -> wave.getWeight() == finalCounter).toList();
+                    if (wavesCandidates.isEmpty()) wavesCandidates = tempCollection.stream().filter(wave -> wave.getWeight() == finalCounter - 1).toList();
+                    if (wavesCandidates.isEmpty()) wavesCandidates = tempCollection.stream().filter(wave -> wave.getWeight() == finalCounter + 1).toList();
+                    if (wavesCandidates.isEmpty()) break;
+
+                    AWave selectedWave = wavesCandidates.get(random.nextInt(0, wavesCandidates.size()));
+                    tempCollection.remove(selectedWave);
+                    wavesPool.add(selectedWave);
+                    counter++;
+                }
+            }
+        };
+    }
+
+    public void startGame(){
+        gameActive = true;
+
+        mainTimer.runTaskTimer(plugin, 0, 20);
+        waveTimer.runTaskTimer(plugin, wavesInterval * 20L, wavesInterval * 20L);
 
         int spawnCount = 0;
         for (PlayerModel model : players){
@@ -161,22 +220,28 @@ public class Arena {
         }
 
         for (PlayerModel model : members){
-            model.getPlayer().showBossBar(timerBar);
+            model.getPlayer().hideBossBar(lobbyTimerBar);
+            model.getPlayer().showBossBar(wavesTimerBar);
         }
     }
 
     private void endGame(){
         mainTimer.cancel();
         waveTimer.cancel();
+        lobbyTimer.cancel();
 
         players.clear();
         spectators.clear();
         members.clear();
 
+        for (AWave wave : activeWaves) wave.stopWave();
+        activeWaves.clear();
 
         // TODO ресет карты
 
         gameActive = false;
+        lobbyTimerActive = false;
+        createWavesPool();
     }
 
     public void forceStop(){
@@ -201,18 +266,36 @@ public class Arena {
     }
 
     private void startNewWave(){
-        AWave currentWave = waves.get(0);
-        waves.remove(0);
+        AWave currentWave = wavesPool.getFirst();
+        wavesPool.removeFirst();
+        activeWaves.add(currentWave);
         currentWave.startWave(arena);
+
+        for (PlayerModel playerModel : players) playerModel.survivedWave();
     }
 
-    private void setTimerDisplay(int currentTime){
-        timerBar.name(Component.text(Utils.convertSecondsToMinutesAndSeconds(currentTime)).color(NamedTextColor.WHITE));
-        timerBar.progress(1 - ((Float.parseFloat(Integer.toString(currentTime)) % 120) / 120));
+    public void forceStartWave(AWave wave){
+        wave.startWave(this);
+        plugin.getLogger().info("Волна была вызвана на арене " + arena.id);
+    }
+
+    private void setWavesTimerDisplay(int currentTime){
+        wavesTimerBar.name(Component.text(Utils.convertSecondsToMinutesAndSeconds(currentTime)).color(NamedTextColor.WHITE));
+        wavesTimerBar.progress(1 - ((Float.parseFloat(Integer.toString(currentTime)) % 120) / 120));
+    }
+
+    private void setLobbyTimerDisplay(int currentTime){
+        lobbyTimerBar.name(Component.text("До начала игры: " + currentTime + " секунд").color(NamedTextColor.WHITE));
+        wavesTimerBar.progress((Float.parseFloat(Integer.toString(currentTime)) / lobbyTimerDuration));
     }
 
     public void tryJoinPlayer(PlayerModel model){
+        if (model.getCurrentArena() != null) return;
+
         members.add(model);
+        model.setCurrentArena(this);
+        if (gameActive) model.getPlayer().showBossBar(wavesTimerBar);
+        else model.getPlayer().showBossBar(lobbyTimerBar);
 
         if (gameActive || players.size() == playerSpawnLocations.size()) {
             joinAsSpectator(model);
@@ -238,6 +321,8 @@ public class Arena {
         Player player = model.getPlayer();
         player.sendMessage(Component.text("Вы присоединились к арене как наблюдатель"));
         player.teleport(lobbyLocation);
+
+        tryStartLobbyTimer();
     }
 
     public void tryLeavePlayer(PlayerModel model){
@@ -254,6 +339,8 @@ public class Arena {
         members.remove(model);
         clearPlayer(model);
 
+        player.hideBossBar(lobbyTimerBar);
+        player.hideBossBar(wavesTimerBar);
         player.teleport(hubLocation);
         player.sendMessage(Component.text("Вы покинули арену"));
     }
@@ -290,5 +377,14 @@ public class Arena {
         model.resetData();
     }
 
+    private void createWavesPool(){
+        asyncWavesPoolCreator.runTaskAsynchronously(plugin);
+    }
 
+    private void tryStartLobbyTimer(){
+        if (!lobbyTimerActive) {
+            lobbyTimer.runTaskTimer(plugin, 0, 20);
+            lobbyTimerActive = true;
+        }
+    }
 }
